# pyHeat1D_web

./: .dockerignore  .env_sample  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: CI.yml
nginx/: Dockerfile  default.conf
pyheat1d_web/: asgi.py  celery.py  conftest.py  settings.py  urls.py  wsgi.py
pyheat1d_web/accounts/: admin.py  apps.py  managers.py  models.py  urls.py  views.py
pyheat1d_web/accounts/migrations/: 0001_initial.py
pyheat1d_web/accounts/tests/: conftest.py  test_manager.py  test_user_model.py
pyheat1d_web/accounts/tests/views/: test_login.py  test_logout.py
pyheat1d_web/core/: admin.py  api.py  apps.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
pyheat1d_web/core/migrations/: 0001_initial.py  0002_alter_simulation_tag_simulation_unique_tag_user.py  0002_simulation_celery_task.py  0002_simulation_status.py  0003_simulation_created_at_simulation_modified_at_and_more.py  0004_simulation_dt_simulation_initialt_and_more.py
pyheat1d_web/core/static/js/: chart.js
pyheat1d_web/core/tests/: conftest.py  constants.py  test_api.py  test_create_analysis_form.py  test_home.py  test_models.py  test_services.py
pyheat1d_web/core/tests/assets/: mesh.json  results.json
pyheat1d_web/core/tests/forms/: test_edit_simulation_form.py  test_new_simulation_form.py
pyheat1d_web/core/tests/views/: test_create_analysis_form.py  test_delete_results.py  test_delete_simulation.py  test_detail_simulation.py  test_edit_simulation.py  test_list_simulation.py  test_run_simumlation.py  test_simulation_results.py
templates/: 404.html  base.html
templates/accounts/: login.html
templates/core/: analysis_detail.html  analysis_list.html  create_analysis_form.html  create_simulation_form.html  detail_simulation.html  edit_simulation_form.html  list_simulation.html  results_simulation.html
templates/core/partials/: footer.html  messages.html  nav.html  return_list.html
